# canvas-cli

./: .gitignore  README.md  SPEC.md  pyproject.toml
canvas_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  extract.py  formatters.py  health.py  index.py  matchers.py  mcp_server.py
canvas_cli/commands/: announcements.py  assignments.py  calendar.py  courses.py  extract.py  files.py  grades.py  inbox.py  modules.py  pages.py  ping.py  quiz.py  read.py  search.py  submit.py  syllabus.py  sync.py
skills/report-coach/: SKILL.md  lessons.md
skills/report-coach/active/lab-3-riboflavin/: Lab 3 Manual_ Riboflavin Fluorescence Spring 2026.docx  Lab 3 Worksheet_ Determination of Riboflavin Content in A Multivitamin.docx  Lab 3 Worksheet_FILLED.docx  Lab 3 Worksheet_FILLED_v2.docx  Lab3_Follow_Along.md  Lab3_Real_Data.md  Linear Calibration Spreadsheet.xlsx  Standard Addition Spreadsheet.xlsx  Untitled2.cmbl  _fill_worksheet.py  _make_plots.py  _worksheet_v2.md
skills/report-coach/active/lab-5-electrochem/: 40518 Week 5 Shared Data.xlsx  Lab 5 Worksheet_ Electrochemistry, Potentiometric Titrations, and Solubility Equilibria.docx  Lab 5 Worksheet_FILLED.docx  PartA_Nernst_Mine.cmbl  PartB_Careful.cmbl  PartC_Careful.cmbl  Understanding the nernst equation data (1).xlsx  _build.py  _fix_fig3_caption.py  _make_plots.py  _surgical_edits.py  _swap_discussion.py  _worksheet.md
skills/report-coach/history/: 2026-04-14_worksheet-1-glassware-calibration.md  2026-04-21_worksheet-2-ferrozine.md  2026-05-16_worksheet-4-acid-base.md
(+18 files in other folders)
