[project]
name = "canvas-cli"
version = "0.4.0"
description = "Command-line tool for UC Irvine Canvas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "canvasapi>=3.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tomli-w>=1.0.0",
    "html2text>=2024.2.26",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "icalendar>=5.0.0",
    "mcp>=1.0.0",
    "markdown>=3.5.0",
]

[project.scripts]
canvas = "canvas_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canvas_cli"]
